--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   db:
     image: postgres:15-alpine
@@ -10,8 +8,8 @@ services:
       POSTGRES_USER: ${DATABASE_USER:-postgres}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD:-postgres}
       PGDATA: /var/lib/postgresql/data/pgdata
-    ports:
-      - "5433:5432"
+    expose:
+      - "5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -19,6 +17,8 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - internal
 
   backend:
     build:
@@ -34,8 +34,19 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    ports:
-      - "2021:8000"
+    expose:
+      - "8000"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.sigepre-backend.rule=Host(`sigepre.mslestrategia.com.br`) && (PathPrefix(`/api`) || PathPrefix(`/auth`) || PathPrefix(`/health`) || PathPrefix(`/db-check`))"
+      - "traefik.http.routers.sigepre-backend.entrypoints=websecure"
+      - "traefik.http.routers.sigepre-backend.priority=200"
+      - "traefik.http.routers.sigepre-backend.tls=true"
+      - "traefik.http.routers.sigepre-backend.tls.certresolver=mytlschallenge"
+      - "traefik.http.services.sigepre-backend.loadbalancer.server.port=8000"
+    networks:
+      - internal
+      - root_default
 
   frontend:
     build:
@@ -45,8 +56,23 @@ services:
     restart: unless-stopped
     depends_on:
       - backend
-    ports:
-      - "8080:80"
+    expose:
+      - "80"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.sigepre-frontend.rule=Host(`sigepre.mslestrategia.com.br`)"
+      - "traefik.http.routers.sigepre-frontend.entrypoints=websecure"
+      - "traefik.http.routers.sigepre-frontend.tls=true"
+      - "traefik.http.routers.sigepre-frontend.tls.certresolver=mytlschallenge"
+      - "traefik.http.services.sigepre-frontend.loadbalancer.server.port=80"
+    networks:
+      - internal
+      - root_default
 
 volumes:
   postgres_data:
+
+networks:
+  internal:
+  root_default:
+    external: true
