--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,6 @@
-services:
-  db:
-    image: postgres:15-alpine
-    container_name: msl_db
-    restart: unless-stopped
-    environment:
-      POSTGRES_DB: ${DATABASE_NAME:-relatorio_pecas}
-      POSTGRES_USER: ${DATABASE_USER:-postgres}
-      POSTGRES_PASSWORD: ${DATABASE_PASSWORD:-postgres}
-      PGDATA: /var/lib/postgresql/data/pgdata
-    expose:
-      - "5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD", "pg_isready", "-U", "${DATABASE_USER:-postgres}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    networks:
-      - internal
+version: "3.9"
 
+services:
   backend:
     build:
       context: ./backend
@@ -28,22 +9,12 @@ services:
     restart: unless-stopped
     env_file:
       - backend/.env
-    depends_on:
-      db:
-        condition: service_healthy
-    expose:
-      - "8000"
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.sigepre-backend.rule=Host(`sigepre.mslestrategia.com.br`) && (PathPrefix(`/api`) || PathPrefix(`/auth`) || PathPrefix(`/health`) || PathPrefix(`/db-check`))"
-      - "traefik.http.routers.sigepre-backend.entrypoints=websecure"
-      - "traefik.http.routers.sigepre-backend.priority=200"
-      - "traefik.http.routers.sigepre-backend.tls=true"
-      - "traefik.http.routers.sigepre-backend.tls.certresolver=mytlschallenge"
-      - "traefik.http.services.sigepre-backend.loadbalancer.server.port=8000"
+    ports:
+      - "2020:8000" # Caddy -> backend
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks:
       - internal
-      - root_default
 
   frontend:
     build:
@@ -53,23 +24,9 @@ services:
     restart: unless-stopped
     depends_on:
       - backend
-    expose:
-      - "80"
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.sigepre-frontend.rule=Host(`sigepre.mslestrategia.com.br`)"
-      - "traefik.http.routers.sigepre-frontend.entrypoints=websecure"
-      - "traefik.http.routers.sigepre-frontend.tls=true"
-      - "traefik.http.routers.sigepre-frontend.tls.certresolver=mytlschallenge"
-      - "traefik.http.services.sigepre-frontend.loadbalancer.server.port=80"
+    ports:
+      - "2021:80" # Caddy -> frontend
     networks:
       - internal
-      - root_default
-
-volumes:
-  postgres_data:
-
 networks:
   internal:
-  root_default:
-    external: true
