--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,7 +3,7 @@ DATABASE_HOST=db
 DATABASE_PORT=5432
 DATABASE_NAME=relatorio_pecas
 DATABASE_USER=postgres
-DATABASE_PASSWORD=Mslestra@2025
+DATABASE_PASSWORD=postgres
 DATABASE_SSLMODE=disable
 POSTGRES_DB=relatorio_pecas
 POSTGRES_USER=postgres
